--- a/ingress.yaml
+++ b/ingress.yaml
@@ -12,20 +12,20 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: login
+                name: login-service
                 port:
                   number: 80
           - path: /payment(/|$)(.*)
             pathType: Prefix
             backend:
               service:
-                name: payment
+                name: payment-service
                 port:
                   number: 80
           - path: /checkout(/|$)(.*)
             pathType: Prefix
             backend:
               service:
-                name: checkout
+                name: checkout-service
                 port:
                   number: 80
