--- a/ingress.yaml
+++ b/ingress.yaml
@@ -3,26 +3,26 @@ kind: Ingress
 metadata:
   name: microservices-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
     - http:
         paths:
-          - path: /login(/|$)(.*)
+          - path: /login
             pathType: Prefix
             backend:
               service:
                 name: login-service
                 port:
                   number: 80
-          - path: /payment(/|$)(.*)
+          - path: /payment
             pathType: Prefix
             backend:
               service:
                 name: payment-service
                 port:
                   number: 80
-          - path: /checkout(/|$)(.*)
+          - path: /checkout
             pathType: Prefix
             backend:
               service:
