--- a/payment-deployment.yaml
+++ b/payment-deployment.yaml
@@ -26,7 +26,7 @@ metadata:
   name: payment-service
 spec:
   selector:
-    name: payment-service
+   app: payment-service
   ports:
     - protocol: TCP
       port: 80
