--- a/checkout-deployment.yaml
+++ b/checkout-deployment.yaml
@@ -26,7 +26,7 @@ metadata:
   name: checkout-service
 spec:
   selector:
-    name: checkout-service
+    app: checkout-service
   ports:
     - protocol: TCP
       port: 80
