--- a/ingress.yaml
+++ b/ingress.yaml
@@ -2,11 +2,13 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: microservices-ingress
+  namespace: payment-application
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - http:
+    - host: app.local
+      http:
         paths:
           - path: /login
             pathType: Prefix
