--- a/ingress.yaml
+++ b/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: app.local
+    - host: *
       http:
         paths:
           - path: /login
