--- a/manifest/ingress.yaml
+++ b/manifest/ingress.yaml
@@ -7,8 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: ""
-      http:
+    - http:
         paths:
           - path: /login
             pathType: Prefix
