--- a/manifest/ingress.yaml
+++ b/manifest/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: microservices-ingress
-  namespace: payment-application
+  # namespace: payment-application
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
